dhall/tests/type-inference/failure/unit/RecursiveRecordMergeOverlapping.txt
Type error: error: RecordTypeMergeRequiresRecordType
 --> <current file>:1:0
  |
1 | { x = True } ∧ { x = False }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RecordTypeMergeRequiresRecordType
  |
